--- a/Source/SmartUV/package.json
+++ b/Source/SmartUV/package.json
@@ -13,18 +13,21 @@
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
+    "axios": "^1.6.8",
     "expo": "~50.0.14",
+    "expo-linear-gradient": "^12.7.2",
+    "expo-location": "^16.5.5",
     "expo-status-bar": "~1.11.1",
+    "express": "^4.19.2",
     "react": "18.2.0",
     "react-native": "0.73.6",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-circular-progress": "^1.3.9",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
-    "react-native-svg": "^15.1.0",
-    "react-native-svg-charts": "^5.4.0",
     "styled": "^1.0.0"
   },
   "devDependencies": {
