--- a/Source/Server/requirements.txt
+++ b/Source/Server/requirements.txt
@@ -1,5 +1,10 @@
-fastapi==0.110.1
-paho-mqtt==2.0.0
-PyJWT==2.8.0
-pymongo==4.7.0
-python-dotenv==1.0.1
+fastapi
+numpy
+scipy
+PyJWT
+pymongo
+python-dotenv
+timm
+torch --index-url https://download.pytorch.org/whl/cpu
+uvicorn
+schedule
