--- a/Source/Server/requirements.txt
+++ b/Source/Server/requirements.txt
@@ -4,7 +4,6 @@ scipy
 PyJWT
 pymongo
 python-dotenv
-timm
-torch --index-url https://download.pytorch.org/whl/cpu
-uvicorn
 schedule
+-f https://download.pytorch.org/whl/torch_stable.html
+torch==1.11.0+cpu
