--- a/Source/SmartUV/package.json
+++ b/Source/SmartUV/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
+    "@taoqf/react-native-mqtt": "^3.0.4",
     "axios": "^1.6.8",
     "expo": "^51.0.8",
     "expo-linear-gradient": "~13.0.2",
@@ -20,6 +21,8 @@
     "expo-status-bar": "~1.12.1",
     "express": "^4.19.2",
     "moment": "^2.30.1",
+    "mqtt": "^5.7.0",
+    "paho-mqtt": "^1.1.0",
     "react": "18.2.0",
     "react-native": "^0.74.1",
     "react-native-chart-kit": "^6.12.0",
@@ -27,9 +30,15 @@
     "react-native-element-dropdown": "^2.10.4",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-paho-mqtt": "^0.1.1",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "^3.31.1",
+    "react-redux": "^9.1.2",
+    "redux": "^5.0.1",
+    "redux-logger": "^3.0.6",
+    "redux-promise-middleware": "^6.2.0",
+    "redux-thunk": "^3.1.0",
     "styled": "^1.0.0"
   },
   "devDependencies": {
