--- a/Source/SmartUV/package.json
+++ b/Source/SmartUV/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
+    "@reduxjs/toolkit": "^2.2.5",
     "@taoqf/react-native-mqtt": "^3.0.4",
     "axios": "^1.6.8",
     "expo": "^51.0.8",
