--- a/Source/SmartUV/package.json
+++ b/Source/SmartUV/package.json
@@ -21,16 +21,19 @@
     "expo-location": "~17.0.1",
     "expo-status-bar": "~1.12.1",
     "express": "^4.19.2",
+    "fs": "^0.0.1-security",
     "moment": "^2.30.1",
     "mqtt": "^5.7.0",
     "paho-mqtt": "^1.1.0",
     "react": "18.2.0",
+    "react_native_mqtt": "^1.3.1",
     "react-native": "^0.74.1",
     "react-native-chart-kit": "^6.12.0",
     "react-native-circular-progress": "^1.3.9",
     "react-native-element-dropdown": "^2.10.4",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-mqtt": "^0.1.0-beta4",
     "react-native-paho-mqtt": "^0.1.1",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "^4.10.1",
